# preop-intelligence

./: .env.example  .gitignore  Dockerfile  Dockerfile.a2a  Dockerfile.postop  Procfile  README.md  pyproject.toml  requirements-a2a.txt
.github/workflows/: ci.yml  deploy.yml
demo/: DEMO_SCRIPT.md  DEVPOST_SUBMISSION.md  burl_clinical_batch.json  burl_clinical_data.json  burl_imaging_reports.json  complex_patient_story.md  synthea_fixed.json  synthea_style_clinical.json  try_conditions.json  upload_1_conditions.json  upload_2_meds.json  upload_3_labs.json
docs/: COMPETITORS.md  COMPETITORS_DEEP_ANALYSIS.md  PROMPT_OPINION_TUTORIAL_TRANSCRIPT.md  UNDERSTANDING_PREOP_INTELLIGENCE.md  VIDEO_SCRIPT.md
postop_agent/: agent.py  app.py
postop_agent/tools/: __init__.py  postop_tools.py
preop_agent/: agent.py  app.py
preop_agent/tools/: __init__.py  advanced_scores_a2a.py  clinical_protocols_a2a.py  drug_intelligence_a2a.py  imaging_assessment_a2a.py  preop_tools.py  surgical_history_a2a.py  verification_a2a.py
scripts/: live_smoke_test.py
shared/: __init__.py  app_factory.py  fhir_hook.py  middleware.py
src/agent/: preop_coordinator.py  prompts.py  report_generator.py
src/data/: medication_knowledge_base.json
src/mcp_server/: app.py  models.py  (+2 more)
tests/: conftest.py  test_advanced_scores.py  test_burl_end_to_end.py  test_demo_persona_end_to_end.py  test_drug_intelligence.py  test_edge_cases.py  test_fhir_client.py  test_lab_readiness.py  test_medication_checker.py  test_postop_monitor.py  test_risk_calculators.py  test_surgical_history.py  test_verification.py
(+22 files in other folders)
