[project]
name = "preop-intelligence"
version = "1.0.0"
description = "Perioperative Risk Assessment & Optimization System — MCP Server + A2A Agent for the Agents Assemble Healthcare AI Hackathon"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
    "httpx>=0.27",
    "fhir.resources>=7.0.0",
    "google-genai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
preop-mcp = "src.mcp_server.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
ignore = ["E701", "E702", "E402"]
